# geometry-lib

./: .gitignore  CMakeLists.txt  LICENSE  README.md  geometry-lib.sln
geometry-lib/: Point.h  geometry-lib.vcxproj  geometry-lib.vcxproj.filters
include/: Common.h  Line.h  Point.h  Rect.h
unit-test/: LineTest.cpp  PointTest.cpp  PointTest.h  RectTest.cpp  main.cpp  unit-test.vcxproj  unit-test.vcxproj.filters
